@@ -23,7 +23,7 @@ dosection(sectiontype *s, int c)
    int np;
    int k;
    integer thispage = 0;
-   char buf[104];
+   char buf[300]; /* really 253 */
 
    dopsfont(s);
 #ifdef HPS
@@ -40,7 +40,9 @@ dosection(sectiontype *s, int c)
    doubleout(mag);
    numout((integer)DPI);
    numout((integer)VDPI);
-   snprintf(buf, sizeof(buf), "(%.500s)", fulliname);
+   /* possibly lines in eps files are supposed to be <= 255;
+      not worth testing the limits merely to output a long file name. */
+   snprintf(buf, sizeof(buf), "(%.250s)", fulliname);
    cmdout(buf);
    newline();
    cmdout("@start");
